src/objects/Demo_Farmer__c.object
<CustomObject>
    <description>Demo object for Opportunity Bank International</description>
    <fields>
        <fullName>CKW__c</fullName>
        <label>CKW</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demo Farmers</relationshipLabel>
        <relationshipName>Demo_Farmers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crops_Grown__c</fullName>
        <label>Crops Grown</label>
        <picklist>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomatoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>Kampala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mubende</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mpigi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luwero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kasese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushenyi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iganga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tororo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kabale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mbale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soroti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amuru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lira</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension_Organisation_assisting_Farmer__c</fullName>
        <label>Extension Organisation assisting Farmer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Geolocation__c</fullName>
        <label>Farm Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_in_Savings_Account_or_Loan__c</fullName>
        <label>Interested in Savings Account or Loan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Should_Opportunity_Bank_Contact_You__c</fullName>
        <label>Should Opportunity Bank Contact You?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Acreage__c</fullName>
        <label>Total Acreage</label>
        <summarizedField>Demo_Farmer_Plot__c.Crop_Acreage__c</summarizedField>
        <summaryForeignKey>Demo_Farmer_Plot__c.Demo_Farmer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Demo Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OBI{000}</displayFormat>
        <label>Demo Farmer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Farmers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>